# vlincs

./: .gitattributes  .gitignore  LATEST_NO_ANCHOR_PROGRESS.txt  README.md  SCORES.md  bitbucket-pipelines.yml  demo.sh  demo_wisc.sh  pyproject.toml
artifacts/: README.md  ds1_dense_gt_data_root_20260622.tar.gz.sha256
ci/: publish_scores.sh  render_scores.py  scores_history.csv
db/: docker-compose.yml  init.sql  smoke_test.py
docs/: global_id_method_notes_20260621.md
eval/: sample_botsort_vs_gt_metrics.json  sample_botsort_vs_gt_summary.csv
gallery-ui/: .npmrc  README.md  angular.json  package-lock.json  package.json  proxy.conf.json
kit/: Dockerfile  README.md  admit_no_anchor_component_graph_candidates.py  analyze_no_anchor_assignment_errors.py  analyze_no_anchor_assignment_summary_proxy.py  analyze_no_anchor_component_errors.py  analyze_no_anchor_component_graph_rule_sweep.py  analyze_no_anchor_component_retrieval.py  analyze_no_anchor_edge_mass_budget.py  analyze_no_anchor_edge_table_oracle_coverage.py  analyze_no_anchor_full_proxy_training.py  analyze_no_anchor_oracle_gap_concentration.py  analyze_no_anchor_preview_evidence.py  analyze_no_anchor_source_island_acceptor.py  analyze_no_anchor_target_fragment_rules.py  analyze_sample_feature_retrieval.py  analyze_tracklet_oracle_full.py  apply_no_anchor_candidate_combo.py  apply_no_anchor_component_bridge_counterfactuals.py  apply_no_anchor_ranked_repairs.py  apply_no_anchor_visual_edge_decisions.py  apply_no_anchor_visual_edge_reassignment.py  apply_no_anchor_visual_edge_surgery.py  arbitrate_no_anchor_source_local_targets.py  attach_no_anchor_countertarget_opponent_features.py  audit_no_anchor_autoresearch_protocol.py  audit_no_anchor_candidate_false_split_coverage.py  audit_no_anchor_countertarget_verifier.py  audit_no_anchor_endpoint_candidates.py  audit_no_anchor_generated_positive_ctf.py  audit_no_anchor_pseudo_labels.py  audit_no_anchor_scheduler_side_effects.py  build_no_anchor_attach_side_effect_labels.py  build_no_anchor_generated_positive_prompt_assets.py  cli.py  compose_no_anchor_assignment_overlays.py  compose_no_anchor_component_graph_candidates.py  compose_no_anchor_component_subset_variants.py  compose_no_anchor_cross_manifest_repairs.py  compose_no_anchor_hub_bridge_candidates.py  (+145 more)
log/: 2026-05-25_tracker_recall_sweep.md
reports/: autoresearch_deli_vlincs_distillation_20260621.md  autoresearch_distillation_for_vlincs_20260620.md  deli_autoresearch_component_admission_20260620.md  deli_autoresearch_distillation_vlincs_20260620.md  deli_autoresearch_selfplay_operationalization_20260621.md  deli_autoresearch_selfplay_operationalization_20260622.md  deli_autoresearch_vlincs_distillation_20260620.md  deli_autoresearch_vlincs_distillation_20260621.md  deli_autoresearch_vlincs_distillation_20260622.md  feature_retrieval_botsort_osnet_color_s3_20260622.md  feature_retrieval_gtbox_osnet_color_s3_20260622.md  no_anchor_adversary_bridge_counterfactuals_proxy_20260620.md  no_anchor_assignment_summary_proxy_20260620.md  no_anchor_assignment_summary_proxy_full_ds1_20260620.md  no_anchor_assignment_summary_proxy_fullscore_queue_20260620.md  no_anchor_autoresearch_protocol_20260619.md  no_anchor_autoresearch_protocol_audit_20260620.md  no_anchor_autoresearch_protocol_audit_after_consensus_20260620.md  no_anchor_autoresearch_protocol_audit_assignment_summary_proxy_20260620.md  no_anchor_autoresearch_single_edge_ablation_20260620.md  no_anchor_autoresearch_temporal_target_fragment_refutation_20260621.md  no_anchor_botsort_gtbox_tracklet_upper_bound_20260621.md  no_anchor_botsort_s5_mean_std_feature_ablation_20260622.md  (+254 more)
tests/: test_consolidate_equiv.py  (+1 more)
(+563 files in other folders)
